--- a/UIKitListModule/UIKitListModule/Base.lproj/Main.storyboard
+++ b/UIKitListModule/UIKitListModule/Base.lproj/Main.storyboard
@@ -1,24 +1,166 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Z52-qh-dGP">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Employees Table View Controller-->
+        <scene sceneID="EGR-aV-QZI">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController storyboardIdentifier="EmployeesTableViewController" id="s9x-xI-S9G" customClass="EmployeesTableViewController" customModule="UIKitListModule" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WvC-74-Jut">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xhZ-e5-9ZZ">
+                                <rect key="frame" x="0.0" y="839" width="414" height="49"/>
+                                <items>
+                                    <barButtonItem systemItem="add" id="klK-Xe-5kK">
+                                        <connections>
+                                            <segue destination="AD0-Ed-vAp" kind="presentation" id="ymX-vq-DVg"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="PgS-4R-aDd"/>
+                                    <barButtonItem systemItem="trash" id="mxn-rS-ciq">
+                                        <connections>
+                                            <action selector="deleteRow:" destination="s9x-xI-S9G" id="FQv-1k-BKt"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="PO9-jt-qQf">
+                                <rect key="frame" x="0.0" y="88" width="414" height="751"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="employeeCell" id="eAi-Iu-hd6" customClass="EmployeeCell" customModule="UIKitListModule" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eAi-Iu-hd6" id="T5I-j1-nMl">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hI3-iS-fXK">
+                                                    <rect key="frame" x="16" y="8" width="382" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="hI3-iS-fXK" secondAttribute="trailing" constant="16" id="CCl-kE-Wgf"/>
+                                                <constraint firstItem="hI3-iS-fXK" firstAttribute="leading" secondItem="T5I-j1-nMl" secondAttribute="leading" constant="16" id="I1v-Ew-04J"/>
+                                                <constraint firstItem="hI3-iS-fXK" firstAttribute="top" secondItem="T5I-j1-nMl" secondAttribute="top" constant="8" id="cC4-wP-omV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="occupationLabel" destination="hI3-iS-fXK" id="BVI-vr-nJM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="VZH-IV-vII"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="VZH-IV-vII" firstAttribute="trailing" secondItem="PO9-jt-qQf" secondAttribute="trailing" id="2SO-gV-bcx"/>
+                            <constraint firstItem="PO9-jt-qQf" firstAttribute="leading" secondItem="VZH-IV-vII" secondAttribute="leading" id="5F0-kF-uFY"/>
+                            <constraint firstItem="xhZ-e5-9ZZ" firstAttribute="leading" secondItem="VZH-IV-vII" secondAttribute="leading" id="C5s-ka-cjk"/>
+                            <constraint firstAttribute="bottom" secondItem="xhZ-e5-9ZZ" secondAttribute="bottom" constant="8" id="a3n-Xf-kvy"/>
+                            <constraint firstItem="xhZ-e5-9ZZ" firstAttribute="trailing" secondItem="VZH-IV-vII" secondAttribute="trailing" id="eFF-LE-eT7"/>
+                            <constraint firstItem="PO9-jt-qQf" firstAttribute="top" secondItem="VZH-IV-vII" secondAttribute="top" id="nUY-at-eGW"/>
+                            <constraint firstItem="xhZ-e5-9ZZ" firstAttribute="top" secondItem="PO9-jt-qQf" secondAttribute="bottom" id="oIU-aX-thg"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="bjs-ZF-llC"/>
+                    <connections>
+                        <outlet property="deleteRowButton" destination="mxn-rS-ciq" id="C5R-oP-fa3"/>
+                        <outlet property="tableView" destination="PO9-jt-qQf" id="V3k-ij-Ie2"/>
+                        <outlet property="toolBar" destination="xhZ-e5-9ZZ" id="2xt-gj-iAB"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ymB-Ps-chj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1767" y="155"/>
+        </scene>
+        <!--Employee Detail View Controller-->
+        <scene sceneID="xWO-pg-Fnj">
+            <objects>
+                <viewController id="AD0-Ed-vAp" customClass="EmployeeDetailViewController" customModule="UIKitListModule" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nQF-Ci-Ykg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qfW-by-SSD">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                <items>
+                                    <navigationItem title="Add Employee" id="mpb-5p-WCk">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="FAJ-3x-Mfo">
+                                            <connections>
+                                                <action selector="cancelWithSegue:" destination="AD0-Ed-vAp" id="XUq-Ls-yEF"/>
+                                                <segue destination="d35-vA-AzC" kind="unwind" identifier="cancelSegue" unwindAction="cancelWithSegue:" id="j2d-Wv-BK7"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Q4P-tz-ZQN">
+                                            <connections>
+                                                <action selector="doneWithSegue:" destination="AD0-Ed-vAp" id="7pY-cj-sVV"/>
+                                                <segue destination="d35-vA-AzC" kind="unwind" identifier="doneSegue" unwindAction="doneWithSegue:" id="fXP-xX-mWe"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uye-T2-9SD">
+                                <rect key="frame" x="16" y="96" width="382" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="KxF-d7-Q31"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="KxF-d7-Q31" firstAttribute="trailing" secondItem="uye-T2-9SD" secondAttribute="trailing" constant="16" id="Fkt-6n-1dj"/>
+                            <constraint firstItem="qfW-by-SSD" firstAttribute="trailing" secondItem="KxF-d7-Q31" secondAttribute="trailing" id="MzJ-UU-ReJ"/>
+                            <constraint firstItem="uye-T2-9SD" firstAttribute="top" secondItem="qfW-by-SSD" secondAttribute="bottom" constant="40" id="N6Z-NW-8AF"/>
+                            <constraint firstItem="uye-T2-9SD" firstAttribute="leading" secondItem="KxF-d7-Q31" secondAttribute="leading" constant="16" id="WSd-tM-oHa"/>
+                            <constraint firstItem="qfW-by-SSD" firstAttribute="top" secondItem="nQF-Ci-Ykg" secondAttribute="topMargin" id="WWM-LR-EmE"/>
+                            <constraint firstItem="qfW-by-SSD" firstAttribute="leading" secondItem="KxF-d7-Q31" secondAttribute="leading" id="kgj-cr-CeN"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="employeeOccupation" destination="uye-T2-9SD" id="V5S-9J-g0B"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ob1-0Y-e05" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="d35-vA-AzC" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2559" y="155"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eeh-U4-8Vf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Z52-qh-dGP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Tdn-Nb-pms">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="s9x-xI-S9G" kind="relationship" relationship="rootViewController" id="c8j-QK-f0v"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="je7-EC-UmA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="857" y="155"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
